# hpwt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  inputGen.py  small_text_input.txt
distwt/: CMakeLists.txt
distwt/apps/: mpi_dd.hpp  mpi_launcher.hpp
distwt/common/: binary_io.hpp  bitrev.cpp  bitrev.hpp  bv64.hpp  devnull.hpp  effective_alphabet.hpp  histogram.hpp  result.cpp  result.hpp  util.hpp  wt.hpp  wt_sequential.hpp
distwt/mpi/: bit_vector.hpp  context.cpp  context.hpp  effective_alphabet.hpp  file_partition_reader.hpp  histogram.hpp  malloc.hpp  mpi_sum.cpp  mpi_sum.hpp  mpi_type.cpp  mpi_type.hpp  result.hpp  types.hpp  uint64_pack.cpp  uint64_pack.hpp  uint64_pack_bv64.hpp  uint_types.hpp  util.hpp  wt.hpp  wt_levelwise.cpp  wt_levelwise.hpp  wt_nodebased.hpp
pwm/: wx_pc.hpp  wx_ppc.hpp  wx_pps.hpp
pwm/arrays/: bit_vectors.hpp  flat_two_dim_array.hpp  helper_array.hpp  pow2_array.hpp  span.hpp
pwm/construction/: building_blocks.hpp  ctx_generic.hpp  pc.hpp  ppc.hpp  pps.hpp  wavelet_structure.hpp
pwm/util/: alphabet_util.hpp  common.hpp  debug.hpp  decode.hpp
src/: CMakeLists.txt  alignment_allocator.hpp  bit_rank.hpp  bit_vector.hpp  bit_vector_main.cpp  main.cpp  main_ppc.cpp  main_pps.cpp  omp_write_bits.hpp  validate_distwt.hpp  wt_combined.hpp  wt_pc_combined.hpp  wt_ppc_nodebased.hpp  wt_pps_nodebased.hpp  wx_base.hpp  wx_pc.hpp  wx_ppc.hpp
src/arrays/: flat_two_dim_array.hpp  span.hpp
src/construction/: building_blocks.hpp  ctx_generic.hpp  pc.hpp  ppc.hpp  wavelet_structure.hpp
src/util/: alphabet_util.hpp  common.hpp  debug.hpp  decode.hpp  permutation.hpp
